# ozon-tools

./: .gitignore  README.md  ozon-bot.service  ozon-positions.service  ozon-positions.timer  pyproject.toml
bot/: commands.py  handlers.py  main.py
sheets/gardenika/: spread_id.txt
src/: main.py
src/core/: exceptions.py  logger.py  settings.py
src/models/: search.py
src/services/: browser.py  ozon_api.py  ozon_client.py  positions_sheet.py  sheets_client.py
