[project]
name = "reverse-ozon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.14.0",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "pydantic-settings>=2.13.1",
]
